<resources>
    <string name="app_name">Messaging_version_0.1</string>
    <string name="messaging">Messaging</string>
    <string name="todo">TODO</string>
    <string name="new_message">New Message</string>
    <string name="to">To:</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_text">Enter Text</string>
    <string name="new_group">New Group</string>
    <string name="join_group">Join Group</string>
    <string name="textview">TextView</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="done">Done</string>
    <string name="total_contacts">Total Contacts</string>
</resources>
