<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat_activity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/openMain_Activity"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/todo"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/new_message"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/dd_menuGroup"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/todo"
            android:onClick="showDropdown"
            app:srcCompat="@drawable/ic_group_black_24dp" />

        <EditText
            android:id="@+id/txt_pNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_phone_no"
            android:inputType="phone"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_ContactRecycler"
        android:layout_width="402dp"
        android:layout_height="532dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.459" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/txt_message"
            android:layout_width="331dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|top"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:textColor="#2D2F31" />

    </FrameLayout>

    <Button
        android:id="@+id/button2"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_send_24"
        android:onClick="btn_send"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>